Squashed commit of the following:
commit 7d6c5f227c262802bb2865bb7531a2aeb1e01f0e
Author: jammacn <jeff@jamma.cn>
Date:   Sun Jan 19 00:17:38 2020 +0800

    prefix

commit 1ed600d75b6e0212f6f8e5da9568c48cba32fda2
Author: jammacn <jeff@jamma.cn>
Date:   Sat Jan 18 21:34:41 2020 +0800

    Dockerfile

commit 15f17e38dabe137dd3438efb3f77ed03057a7e3e
Author: jammacn <jeff@jamma.cn>
Date:   Fri Jan 17 22:17:49 2020 +0800

    prefix

commit cbe04f4880f2d4ec030bf5eb4561a0e1bc6e662f
Author: jammacn <jeff@jamma.cn>
Date:   Fri Jan 17 21:47:57 2020 +0800

    README.md

commit 58417913bb28f59509999ba9b4a0a6513250d6d2
Author: jammacn <jeff@jamma.cn>
Date:   Fri Jan 17 19:16:46 2020 +0800

    config

commit c0539ae91a0ecfead2b796468fbc8ed843e681bf
Author: jammacn <jeff@jamma.cn>
Date:   Fri Jan 17 18:54:39 2020 +0800

    prefix

commit bfa6fd77298a44e1067b60ff62ffc8e444d344d4
Author: jammacn <jeff@jamma.cn>
Date:   Fri Jan 17 15:51:19 2020 +0800

    all in one

commit 95c134d5f042ad158f4cbb6662f6c648a6befe8a
Author: jammacn <jeff@jamma.cn>
Date:   Sun Jan 5 19:00:50 2020 +0800

    jm-server-jaeger@0.0.3

commit 144456e77d4c3c2519c7172f23a1a64ceffe799f
Author: jammacn <jeff@jamma.cn>
Date:   Sun Dec 8 13:51:25 2019 +0800

    default gateway and serviceName

commit e030ccda0117fbae894066c1cc7fd9747ede1264
Author: jammacn <jeff@jamma.cn>
Date:   Sun Dec 8 13:29:00 2019 +0800

    create jm-passport@2.0.3

commit fa398e216cd1e0df679de5fdc7f09ede87fde6ed
Author: jammacn <jeff@jamma.cn>
Date:   Sun Dec 8 13:26:17 2019 +0800

    standardjs

--- a/packages/jm-passport/package.json
+++ b/packages/jm-passport/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "jm-passport-mobile",
-  "version": "2.0.1",
-  "description": "passport service for mobile",
+  "name": "jm-passport",
+  "version": "2.0.3",
+  "description": "general passport service",
   "main": "./lib/index",
   "scripts": {
-    "start": "jm-server",
-    "cluster": "jm-server --cluster",
     "test": "jest"
   },
   "repository": {
@@ -14,7 +12,7 @@
   },
   "keywords": [
     "javascript",
-    "jm-passport-mobile"
+    "jm-passport"
   ],
   "author": {
     "name": "Jeff YU"
