--- a/package.json
+++ b/package.json
@@ -1,8 +1,46 @@
 {
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "start": "npx jm-server",
+    "cluster": "npx jm-server --cluster",
+    "lint": "standard",
+    "lint:fix": "standard --fix"
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ],
+    "ignore": [
+      "**/dist/"
+    ]
+  },
+  "dependencies": {
+    "config": "^3.2.4",
+    "jm-err": "^1.0.7",
+    "jm-log4js": "^2.0.5",
+    "jm-server": "^2.0.9",
+    "jm-server-jaeger": "^0.0.3",
+    "log4js": "^6.1.0"
+  },
   "devDependencies": {
-    "lerna": "^2.11.0"
+    "husky": "^1.2.0",
+    "jest": "^23.1.0",
+    "lerna": "^2.11.0",
+    "lint-staged": "^8.1.0",
+    "standard": "^12.0.1"
   }
 }
