--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .idea
+.svn
 node_modules
+docs
+logs
+yarn.lock
+development.js
 package-lock.json
 lerna-debug.log
-yarn.lock
-logs
-development.js
