--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "config": "^3.2.4",
     "jm-err": "^1.0.7",
     "jm-log4js": "^2.0.5",
-    "jm-server": "^2.0.9",
+    "jm-server": "^2.1.0-beta",
     "jm-server-jaeger": "^0.0.3",
     "log4js": "^6.1.0"
   },
