--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   },
   "dependencies": {
     "config": "^3.2.4",
-    "jm-err": "^1.0.7",
-    "jm-log4js": "^2.0.5",
-    "jm-server": "^2.1.0-beta",
+    "jm-server": "^2.1.0-beta.3",
     "jm-server-jaeger": "^0.0.3",
     "log4js": "^6.1.0"
   },
