--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "config": "^3.2.4",
-    "jm-server": "^2.1.0-beta.4",
+    "jm-server": "^2.1.0",
     "jm-server-jaeger": "^0.0.3",
     "log4js": "^6.1.0"
   },
